adjust: login button color fix: letter spacing

--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -21,6 +21,10 @@
     .input {
       margin-top: 0.5rem;
     }
+    .loginBtn {
+      background-color: #3d6ee298;
+      color: #ffffff;
+    }
   }
   .cardImg {
     height: 100vh;
