--- a/src/Pages/Todo/Todo.scss
+++ b/src/Pages/Todo/Todo.scss
@@ -16,11 +16,11 @@
     }
     .userInfoContainer {
       border-radius: 1rem;
-      background-color: #f898b748;
+      background-color: #40426ed2;
       -webkit-box-shadow: 0px 0px 26px -9px rgba(0, 0, 0, 0.6);
       -moz-box-shadow: 0px 0px 26px -9px rgba(0, 0, 0, 0.6);
       box-shadow: 0px 0px 26px -9px rgba(0, 0, 0, 0.6);
-      color: #404488d7;
+      color: #efcbf1;
       padding: 1rem;
       margin: 2rem 2rem;
       display: flex;
@@ -36,7 +36,7 @@
         margin: 1rem;
         line-height: 2;
         font-weight: 500;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
         font-size: 1.5rem;
         .userFirstName {
           text-transform: capitalize;
@@ -61,11 +61,13 @@
       .categoryInputContainer {
         margin: 2rem 0;
         .addCategory {
-          background-color: #bbcfff;
-          color: #39375b;
+          background-color: #3d6ee298;
+          color: #ffffff;
+          letter-spacing: 1px;
         }
         .resetAll {
           background-color: #c9485b;
+          letter-spacing: 1px;
         }
       }
       .categoryList {
@@ -120,8 +122,9 @@
       box-shadow: 0px 0px 26px -9px rgba(0, 0, 0, 0.6);
       //todoaddd btn
       .todoAdd {
-        background-color: #bbcfff;
-        color: #39375b;
+        background-color: #3d6ee298;
+        color: #ffffff;
+        letter-spacing: 1px;
       }
       .overlay {
         position: absolute;
@@ -140,11 +143,13 @@
           cursor: pointer;
           background-color: #2f3275;
           color: #ffffff;
+          letter-spacing: 1px;
         }
         .deleteBtn {
           align-self: center;
           cursor: pointer;
           background-color: #c9485b;
+          letter-spacing: 1px;
         }
       }
       .cardContent {
@@ -185,6 +190,7 @@
         cursor: pointer;
         background-color: #9294df;
         color: #ffffff;
+        letter-spacing: 1px;
       }
     }
     .createCard {
@@ -192,6 +198,7 @@
       .createBtn {
         background-color: #cb99cf;
         color: #ffffff;
+        letter-spacing: 1px;
       }
     }
   }
